--- a/src/br/ip2/project/view/home/home.css
+++ b/src/br/ip2/project/view/home/home.css
@@ -37,3 +37,33 @@
 #divPanel{
     -fx-background-image: url("img/divPanel.jpg");
 }
+
+
+.background-pane{
+    -fx-background-size: 200px 150px;
+    -fx-opacity: 1;
+    -fx-background-repeat: no-repeat;
+}
+.background-pane:hover{
+    -fx-opacity: 1;
+}
+.label-pane{
+    -fx-text-fill: white;
+    -fx-font-size: 40px;
+    -fx-alignment: center;
+    -fx-opacity: 0;
+}
+.label-pane:hover{
+    -fx-opacity: 1;
+    
+}
+.background-pane#action{
+    -fx-background-image: url(img/action.pane.index.jpg);
+    -fx-background-repeat: no-repeat;
+}
+
+.background-pane {
+}
+
+.label-pane {
+}
