--- a/src/br/ip2/project/view/home/home.fxml
+++ b/src/br/ip2/project/view/home/home.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.TilePane?>
 
@@ -14,29 +15,32 @@
    <children>
       <MenuBar prefHeight="35.0" prefWidth="614.0">
         <menus>
-          <Menu mnemonicParsing="false" text="Meu Perfil">
+          <Menu mnemonicParsing="false" text="Perfil">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+                <MenuItem mnemonicParsing="false" text="Vizualizar" />
+                <MenuItem mnemonicParsing="false" text="Editar" />
+                <MenuItem mnemonicParsing="false" text="Sair" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Minha Galeira de Filmes">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem mnemonicParsing="false" text="Vizualizar" />
+                <MenuItem mnemonicParsing="false" text="Adicionar Filme/Remover Filme" />
+                <MenuItem mnemonicParsing="false" text="Compartilhar" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Novidades">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" text="Lançamentos" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
       <TilePane layoutX="8.0" layoutY="45.0" prefHeight="56.0" prefWidth="271.0" />
-      <GridPane layoutX="9.0" layoutY="111.0" prefHeight="286.0" prefWidth="603.0">
+      <GridPane layoutX="9.0" layoutY="122.0" prefHeight="275.0" prefWidth="345.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="177.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="168.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -44,15 +48,10 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ImageView fitHeight="93.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="10.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="10.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="10.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="211.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="411.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="10.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="211.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <ImageView fitHeight="93.0" fitWidth="200.0" layoutX="411.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Pane fx:id="action" prefHeight="200.0" prefWidth="200.0" styleClass="background-pane" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <children>
+                   <Label alignment="BOTTOM_CENTER" layoutX="64.0" layoutY="20.0" prefHeight="56.0" prefWidth="96.0" styleClass="label-pane" text="Ação" />
+               </children></Pane>
          </children>
       </GridPane>
    </children>
