--- a/src/java/main/java/br/ip2/project/view/fxml/galeria.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/galeria.fxml
@@ -20,7 +20,50 @@
       <items>
         <AnchorPane>
           <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="44.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" styleClass="Label" text="Meus Favoritos" textAlignment="CENTER" wrapText="false">
+                  <GridPane layoutY="150.0" prefHeight="278.0" prefWidth="380.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Pane fx:id="comedia" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1">
+                           <children>
+                              <Label layoutX="24.0" layoutY="33.0" text="Comedia " />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="acao" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="1">
+                           <children>
+                              <Label layoutX="57.0" layoutY="33.0" text="Ação" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="aventura" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <Label layoutX="21.0" layoutY="33.0" text="Aventura" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="nacionais" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="2">
+                           <children>
+                              <Label layoutX="40.0" layoutY="32.0" text="Nacionais" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="familia" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <children>
+                              <Label layoutX="39.0" layoutY="32.0" text="Família" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="drama" prefHeight="200.0" prefWidth="200.0" style="-fx-border-radius: 25px;" styleClass="pnGenero">
+                           <children>
+                              <Label layoutX="47.0" layoutY="33.0" text="Drama" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </GridPane>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="44.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" styleClass="Label" text="Pesquise aqui" textAlignment="CENTER" wrapText="false">
               <font>
                 <Font size="18.0" fx:id="x1" />
               </font>
@@ -30,61 +73,18 @@
             </Label>
           </children>
         </AnchorPane>
-        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
+        <ScrollPane prefHeight="564.0" prefWidth="348.0">
           <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="531.0" prefWidth="379.0">
+            <AnchorPane id="Content" fx:id="webViewer" minHeight="-1.0" minWidth="-1.0" prefHeight="556.0" prefWidth="303.0">
               <children>
-                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="48.0" style="&#10;" styleClass="Label" text="Busque por Gênero" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                        <GridPane layoutX="5.0" layoutY="138.0" prefHeight="278.0" prefWidth="380.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Pane fx:id="comedia" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1">
-                                 <children>
-                                    <Label layoutX="24.0" layoutY="33.0" text="Comedia " />
-                                 </children>
-                              </Pane>
-                              <Pane fx:id="acao" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label layoutX="57.0" layoutY="33.0" text="Ação" />
-                                 </children>
-                              </Pane>
-                              <Pane fx:id="aventura" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label layoutX="21.0" layoutY="33.0" text="Aventura" />
-                                 </children>
-                              </Pane>
-                              <Pane fx:id="nacionais" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="2">
-                                 <children>
-                                    <Label layoutX="40.0" layoutY="32.0" text="Nacionais" />
-                                 </children>
-                              </Pane>
-                              <Pane fx:id="familia" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                 <children>
-                                    <Label layoutX="39.0" layoutY="32.0" text="Família" />
-                                 </children>
-                              </Pane>
-                              <Pane fx:id="drama" prefHeight="200.0" prefWidth="200.0" style="-fx-border-radius: 25px;" styleClass="pnGenero">
-                                 <children>
-                                    <Label layoutX="47.0" layoutY="33.0" text="Drama" />
-                                 </children>
-                              </Pane>
-                           </children>
-                        </GridPane>
+                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="48.0" style="&#10;" styleClass="Label" text="Visualize aqui" textAlignment="CENTER" textFill="$x2" wrapText="false" />
               </children>
             </AnchorPane>
           </content>
         </ScrollPane>
         <AnchorPane prefHeight="551.0" prefWidth="299.0" style="-fx-border-radius: 25px; -fx-background-radius: 25px;">
           <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="54.0" style="&#10;" styleClass="Label" text="Detalhes " textAlignment="CENTER" textFill="$x2" wrapText="false" />
+            <Label alignment="CENTER" font="$x1" layoutX="12.0" layoutY="57.0" style="&#10;" styleClass="Label" text="Compartilhe" textAlignment="CENTER" textFill="$x2" wrapText="false" />
           </children>
         </AnchorPane>
       </items>
