--- a/src/java/main/java/br/ip2/project/view/fxml/galeria.fxml
+++ b/src/java/main/java/br/ip2/project/view/fxml/galeria.fxml
@@ -6,10 +6,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
@@ -18,51 +15,8 @@
   <children>
     <SplitPane dividerPositions="0.33458646616541354" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane prefHeight="782.0" prefWidth="200.0">
+        <AnchorPane prefHeight="782.0" prefWidth="487.0">
           <children>
-                  <GridPane layoutY="204.0" prefHeight="224.0" prefWidth="314.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Pane fx:id="comedia" prefHeight="100.0" prefWidth="100.0" styleClass="pnGenero" GridPane.columnIndex="1">
-                           <children>
-                              <Label layoutX="11.0" layoutY="33.0" text="Comedia " />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="acao" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="1">
-                           <children>
-                              <Label layoutX="37.0" layoutY="33.0" text="Ação" />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="aventura" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <children>
-                              <Label layoutX="8.0" layoutY="33.0" text="Aventura" />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="nacionais" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.rowIndex="2">
-                           <children>
-                              <Label layoutX="14.0" layoutY="33.0" text="Nacionais" />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="familia" prefHeight="200.0" prefWidth="200.0" styleClass="pnGenero" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                           <children>
-                              <Label layoutX="20.0" layoutY="32.0" text="Família" />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="drama" prefHeight="200.0" prefWidth="200.0" style="-fx-border-radius: 25px;" styleClass="pnGenero">
-                           <children>
-                              <Label layoutX="24.0" layoutY="33.0" text="Drama" />
-                           </children>
-                        </Pane>
-                     </children>
-                  </GridPane>
             <Label alignment="CENTER" layoutX="14.0" layoutY="44.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" styleClass="Label" text="Pesquise aqui" textAlignment="CENTER" wrapText="false">
               <font>
                 <Font size="18.0" fx:id="x1" />
@@ -73,11 +27,41 @@
             </Label>
                   <TextField layoutX="14.0" layoutY="96.0" />
                   <Button layoutX="178.0" layoutY="96.0" mnemonicParsing="false" text="Go" />
+                  <Pane fx:id="comedia" layoutX="254.0" layoutY="391.0" prefHeight="82.0" prefWidth="164.0" styleClass="pnGenero">
+                     <children>
+                        <Label layoutX="39.0" layoutY="29.0" text="Comedia " />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="aventura" layoutX="263.0" layoutY="516.0" prefHeight="89.0" prefWidth="164.0" styleClass="pnGenero">
+                     <children>
+                        <Label layoutX="34.0" layoutY="33.0" text="Aventura" />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="familia" layoutX="45.0" layoutY="345.0" prefHeight="82.0" prefWidth="141.0" styleClass="pnGenero">
+                     <children>
+                        <Label layoutX="33.0" layoutY="29.0" text="Família" />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="acao" layoutX="45.0" layoutY="466.0" prefHeight="89.0" prefWidth="141.0" styleClass="pnGenero">
+                     <children>
+                        <Label layoutX="44.0" layoutY="33.0" text="Ação" />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="drama" layoutX="254.0" layoutY="276.0" prefHeight="82.0" prefWidth="164.0" style="-fx-border-radius: 25px;" styleClass="pnGenero">
+                     <children>
+                        <Label layoutX="34.0" layoutY="29.0" text="Drama" />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="nacionais" layoutX="45.0" layoutY="213.0" prefHeight="82.0" prefWidth="141.0" styleClass="pnGenero">
+                     <children>
+                        <Label layoutX="20.0" layoutY="29.0" text="Nacionais" />
+                     </children>
+                  </Pane>
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="564.0" prefWidth="348.0">
           <content>
-            <AnchorPane id="Content" fx:id="content" minHeight="-1.0" minWidth="-1.0" prefHeight="780.0" prefWidth="650.0">
+            <AnchorPane id="Content" fx:id="content" minHeight="-1.0" minWidth="-1.0" prefHeight="780.0" prefWidth="916.0">
               <children>
                 <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="48.0" style="&#10;" styleClass="Label" text="Visualize aqui" textAlignment="CENTER" textFill="$x2" wrapText="false" />
               </children>
