--- a/src/br/ip2/project/view/css/front_end.css
+++ b/src/br/ip2/project/view/css/front_end.css
@@ -34,9 +34,9 @@
 
 .label{
     -fx-text-fill: white;
-    -fx-font-family: "Cooper Black";
-    -fx-font-size: 12pt;
-    -fx-padding: 2px 2px 1px 2px;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-size: 14pt;
+    -fx-padding: 1px 1px 1px 1px;
     -fx-alignment: center;
 }
 
