--- a/src/br/ip2/project/view/fxml/galeria.fxml
+++ b/src/br/ip2/project/view/fxml/galeria.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -15,34 +14,32 @@
 <VBox fx:id="anchorGaleria" prefHeight="784.0" prefWidth="1382.0" stylesheets="@../css/front_end.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.front_controllers.GaleriaController">
   <SplitPane dividerPositions="0.25" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
     <items>
-      <AnchorPane fx:id="pnDetalhes" prefHeight="780.0" prefWidth="480.0">
+      <AnchorPane fx:id="pnDetalhes" prefHeight="780.0" prefWidth="700.0">
         <children>
           <Label layoutX="14.0" layoutY="40.0" styleClass="Label" text="Detalhes do Filme" />
                <Label layoutX="14.0" layoutY="124.0" style="-fx-text-fill: blue;" text="Sinopse" />
-               <Pane layoutX="-1.0" layoutY="156.0" prefHeight="220.0" prefWidth="350.0">
+               <Pane layoutX="-1.0" layoutY="156.0" prefHeight="253.0" prefWidth="450.0" style="-fx-background-color: blue;">
                   <children>
-                     <Label fx:id="lblSinopse" layoutX="30.0" layoutY="35.0" text="Label" />
+                     <Label fx:id="lblSinopse" layoutX="14.0" layoutY="14.0" text="Label" />
                   </children>
                </Pane>
-               <Label layoutX="14.0" layoutY="380.0" style="-fx-text-fill: blue;" text="Duração :" />
-               <Label fx:id="lblHoras" layoutX="113.0" layoutY="380.0" style="-fx-text-fill: cyan;" text="Horas" />
-               <Label fx:id="lblMinutos" layoutX="182.0" layoutY="380.0" style="-fx-text-fill: cyan;" text="Minutos" />
-               <Pane layoutY="500.0" prefHeight="225.0" prefWidth="350.0" style="-fx-background-color: blue;" />
-               <Label layoutX="14.0" layoutY="464.0" style="-fx-text-fill: blue;" text="Trailler" />
-               <Label fx:id="lblTitulo" layoutX="14.0" layoutY="90.0" style="-fx-text-fill: cyan;" text="Titulo" />
-               <Label layoutX="18.0" layoutY="426.0" style="-fx-text-fill: blue;" text="Gênero :" />
-               <Label fx:id="lblGenero" layoutX="109.0" layoutY="426.0" style="-fx-text-fill: cyan;" text="genero" />
+               <Label layoutX="5.0" layoutY="413.0" style="-fx-text-fill: blue;" text="Duração :" />
+               <Label fx:id="lblHoras" layoutX="91.0" layoutY="413.0" style="-fx-text-fill: blue;" text="H" />
+               <Label fx:id="lblMinutos" layoutX="116.0" layoutY="413.0" style="-fx-text-fill: blue;" text="M" />
+               <Pane layoutY="500.0" prefHeight="275.0" prefWidth="0.0" style="-fx-background-color: blue;" />
+               <Label layoutX="5.0" layoutY="475.0" style="-fx-text-fill: blue;" text="Trailler" />
+               <Label fx:id="lblTitulo" layoutX="14.0" layoutY="90.0" style="-fx-text-fill: blue;" text="Titulo" />
+               <Label layoutX="5.0" layoutY="448.0" style="-fx-text-fill: blue;" text="Gênero :" />
+               <Label fx:id="lblGenero" layoutX="84.0" layoutY="448.0" style="-fx-text-fill: blue;" text="genero" />
+               <Label layoutX="102.0" layoutY="413.0" style="-fx-text-fill: cyan;" text="H" />
+               <Label layoutX="134.0" layoutY="413.0" style="-fx-text-fill: cyan;" text="Min" />
+               <Pane layoutY="500.0" prefHeight="275.0" prefWidth="450.0" />
         </children>
       </AnchorPane>
       <ScrollPane prefHeight="782.0" prefWidth="954.0">
         <content>
-          <AnchorPane fx:id="telaFilmes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="811.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+          <AnchorPane fx:id="telaFilmes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="811.0" prefWidth="832.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
             <children>
-              <Pane fx:id="pn1" layoutX="100.0" layoutY="200.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;">
-                <effect>
-                  <Blend opacity="0.64" />
-                </effect>
-              </Pane>
               <Label alignment="CENTER" layoutX="14.0" layoutY="58.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" styleClass="Label" text="Pesquise aqui" textAlignment="CENTER" wrapText="false">
                 <font>
                   <Font size="18.0" fx:id="x1" />
@@ -83,11 +80,15 @@
                   <Label layoutX="15.0" layoutY="20.0" text="Nacionais" />
                 </children>
               </Pane>
-              <Pane fx:id="pn11" layoutX="400.0" layoutY="200.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
-              <Pane fx:id="pn111" layoutX="700.0" layoutY="200.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
-              <Pane fx:id="pn12" layoutX="110.0" layoutY="600.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
-              <Pane fx:id="pn112" layoutX="410.0" layoutY="600.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
-              <Pane fx:id="pn1111" layoutX="710.0" layoutY="600.0" prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+                     <Pane fx:id="pnMsg" layoutX="136.0" layoutY="306.0" prefHeight="296.0" prefWidth="649.0">
+                        <children>
+                           <Label layoutX="155.0" layoutY="86.0" prefHeight="141.0" prefWidth="340.0" style="-fx-text-fill: cyan;" text="Clique em uma categoria ">
+                              <font>
+                                 <Font size="21.0" />
+                              </font>
+                           </Label>
+                        </children>
+                     </Pane>
             </children>
           </AnchorPane>
         </content>
